# mojacoder

./: LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: main.yml
fargate-tasks/judge/: Dockerfile  appsync.go  check.go  codetest.go  compile.go  go.mod  go.sum  graphql.go  language-definition.json  language.go  main.go  queue.go  run.go
mojacoder-backend/: cdk.json  package-lock.json  package.json  template.yml  tsconfig.json
mojacoder-backend/graphql/: schema.graphql
mojacoder-backend/judge-image/: Dockerfile  appsync.go  check.go  check_test.go  compile.go  go.mod  health.go  judge.go  language-definition.json  language.go  language_test.go  main.go  playground.go  pypy_requirements.txt  python_requirements.txt  queue.go  run.go  s3.go  special-judge-langs.json  specialJudge.go  storage.go  zip.go
mojacoder-backend/judge-image/rust/: Cargo.toml
mojacoder-backend/lib/: contests.ts  judge.ts  mojacoder-backend-stack.ts  problems.ts  users.ts  zone.ts
mojacoder-backend/statemachine/: codeTesting.asl.json
mojacoder-backend/test/: mojacoder-backend.test.ts
mojacoder-frontend/: jest.config.js  next.config.js  package.json  pems.json
mojacoder-frontend/components/: AlertWithSpinner.tsx  ButtonWithSpinner.tsx  CodeEditor.tsx  ContestsTable.tsx  CopyButton.tsx  DateTime.tsx  Difficulty.tsx  DifficultySelector.tsx  Dropzone.tsx  Editor.tsx  Heading.tsx  IconWithText.tsx  InputWithLabel.tsx  JudgeStatusBadge.tsx  JudgeStatusIndicator.module.css  JudgeStatusIndicator.tsx  LanguageSelector.tsx  Layout.tsx  Loading.tsx  Markdown.module.css  Markdown.tsx  ORSeparator.tsx  PasswordInput.tsx  ProblemTab.tsx  Sample.tsx  Score.tsx  Selector.tsx  SubmissionBox.tsx  SubmissionTable.tsx  Title.tsx  Top.tsx  UserIcon.tsx  Username.tsx
mojacoder-frontend/containers/: Appbar.tsx  Authenticate.tsx  ContestEditor.tsx  ContestTop.tsx  Layout.tsx  ProblemEditor.tsx  ProblemTop.tsx  SubmissionPage.tsx  UserPageLayout.tsx
mojacoder-frontend/css/: MarkdownStyle.module.css  align.module.css  (+2 more)
(+222 files in other folders)
